<resources>
    <string name="app_name">BuildMart</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_main_auth_textView_logo">BuildMart</string>
    <string name="signIn">Вход</string>
    <string name="or">Или</string>
    <string name="registration">Регистрация</string>
    <string name="email">Ваш email</string>


    <string name="exist">Есть</string>
    <string name="no">Нет</string>
    <string name="power_supply">Электричество</string>
    <string name="year_of_creation">Год постройки</string>
    <string name="choose">Выбрать</string>
    <string name="sewerage">Канализационная система</string>
    <string name="absent">Отсутствует</string>
    <string name="well">Скважина</string>
    <string name="central">Центральное</string>
    <string name="sump">Колодец</string>
    <string name="water_supply">Водоснабжение</string>
    <string name="liquid">Водяной</string>
    <string name="electric">Электрический</string>
    <string name="warm_floor">Тёплый пол</string>
    <string name="heating">Отопление</string>
    <string name="foundation">Фундамент</string>
    <string name="gas_provided_to_land">Подведен к земельному участку</string>
    <string name="gas_provided_to_house">Подведен к дому</string>
    <string name="gas">Газ</string>
    <string name="wall_material">Материал стен</string>
    <string name="finish_type_almost">Предчистовая</string>
    <string name="finish_type_final">Чистовая</string>
    <string name="finish_type_rough">Черновая</string>
    <string name="finish_type">Отделка</string>
    <string name="four_and_more">4 и более</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="floor_quantity">Количесвто этажей</string>
    <string name="square_m2">Площадь, м2</string>
    <string name="square_acr">Площадь, сот</string>
    <string name="house_square">Площадь дома</string>
    <string name="address">Адрес</string>
    <string name="communications">Коммуникации</string>
    <string name="internet">Интернет</string>
    <string name="tv">Телевидение</string>
    <string name="land_square">Площадь участка</string>
    <string name="land_type">Тип участка</string>
    <string name="parking_place">Парковочное место</string>
    <string name="bathhouse">Баня</string>
    <string name="garden">Сад</string>
    <string name="garage">Гараж</string>
    <string name="greenhouse">Теплица</string>
    <string name="gazebo">Беседка</string>
    <string name="additional_buildings">Постройки на участке</string>
    <string name="transport_accessibility">Транспортная доступность</string>
    <string name="settlement_territory">Территория населенного пункта</string>
    <string name="open">Открытая</string>
    <string name="closed">Закрытая</string>
    <string name="guarded">Охраняемая</string>
    <string name="paved_road">Асфальтированная дорога</string>
    <string name="public_transport_stop">Остановка общественного транспорта</string>
    <string name="railway_station">Железнодорожная станция</string>
    <string name="paved_area">Асфальтированная площадка</string>
    <string name="underground_parking">Подземный паркинг</string>
    <string name="multilevel_parking">Многоэтажный паркинг</string>
    <string name="ground_parking">Наземный паркинг</string>
</resources>