<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.advertisement.CreateAdvertisementLandFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Контент "Участок" -->
        <LinearLayout
            android:id="@+id/fragment_create_advertisement_linear_layout_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/linear_layout_square_land"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:text="@string/land_square"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_text_land_square"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="3dp"
                    android:background="@drawable/rounded_rectangle"
                    android:hint="@string/square_acr"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="10dp"
                    android:textColorHint="@color/hintColor"
                    android:textSize="18sp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_layout_add_buildings_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/additional_buildings"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/linear_layout_add_buildings_minor_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_bathhouse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="0.35"
                        android:backgroundTint="#DDDDDD"
                        android:maxWidth="320dp"
                        android:text="@string/bathhouse"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/button_garden"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="0.35"
                        android:backgroundTint="#DDDDDD"
                        android:maxWidth="320dp"
                        android:text="@string/garden"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/button_garage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="0.3"
                        android:backgroundTint="#DDDDDD"
                        android:maxWidth="320dp"
                        android:text="@string/garage"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_add_buildings_minor_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_greenhouse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="0.35"
                        android:backgroundTint="#DDDDDD"
                        android:maxWidth="320dp"
                        android:text="@string/greenhouse"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/button_gazebo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="0.35"
                        android:backgroundTint="#DDDDDD"
                        android:maxWidth="320dp"
                        android:text="@string/gazebo"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_parking_space_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/parking_place"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:text="@string/garage" />

                    <CheckBox
                        android:id="@+id/checkbox_garage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:text="@string/paved_area" />

                    <CheckBox
                        android:id="@+id/checkbox_paved_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:text="@string/underground_parking" />

                    <CheckBox
                        android:id="@+id/checkbox_underground_parking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:text="@string/multilevel_parking" />

                    <CheckBox
                        android:id="@+id/checkbox_multilevel_parking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:text="@string/ground_parking" />

                    <CheckBox
                        android:id="@+id/checkbox_ground_parking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/land_type"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_choose_land_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#DDDDDD"
                    android:hint="@string/choose"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintColor"
                    android:textStyle="normal"
                    app:cornerRadius="5dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_settlement_territory_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/settlement_territory"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/linear_layout_settlement_territory_minor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="0.35"
                        android:backgroundTint="#DDDDDD"
                        android:text="@string/open"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/button_closed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_weight="0.35"
                        android:backgroundTint="#DDDDDD"
                        android:text="@string/closed"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textStyle="normal" />

                </LinearLayout>


                <Button
                    android:id="@+id/button_guarded"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:backgroundTint="#DDDDDD"
                    android:text="@string/guarded"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textStyle="normal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_transport_accessibility_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_margin="7dp"
                    android:layout_weight="0.5"
                    android:text="@string/transport_accessibility"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:text="@string/paved_road" />

                    <CheckBox
                        android:id="@+id/checkbox_paved_road"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:text="@string/public_transport_stop" />

                    <CheckBox
                        android:id="@+id/checkbox_public_transport_stop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:padding="5dp"
                        android:text="@string/railway_station" />

                    <CheckBox
                        android:id="@+id/checkbox_railway_station"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>